--- a/Midely's Job/exams.html
+++ b/Midely's Job/exams.html
@@ -37,28 +37,292 @@
             <p>or you can download the file from <a href="" id="here"> here</a></p>
           </div>
           <div class="exam1">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
         </div>
           <div class="exam2">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
         </div>
           <div class="exam3">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
           <div class="exam4">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
           <div class="exam5">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
           <div class="exam6">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
           <div class="exam7">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
           <div class="exam8">
-            <img src="images/Screenshot 2024-04-19 132007.png" width="1200px" height="145">
+            <div class="container1">
+              <div class="box">
+                  <div class="amphi">
+                      <img src="images/amphi.jpg" alt="amphi A" id="amphiid">
+                  </div>
+                  <div class="module">
+                      <h2>Nom Du Module</h2>
+                  </div>
+                  <div class="date">
+                      <br><br><br>
+                      <p class="examdate">12/04/2024</p>
+                      <p class="examdate">12:45h</p>
+                      <p class="examdate">Subject Made By :..</p>
+                  </div>
+              <div class="exampalc">
+                      <h2 id="h22">Exam Placement</h2>
+                      <hr id="hr1">
+                      <ul id="list1">
+                          <li>G1-G2-G3 : Amphi ampere</li>
+                          <li>G4-G5-G6 : Amphi A</li>
+                          <li>G*-G*-G* : Amphi B</li>
+                      </ul>
+                  </div>
+              <div class="observers">
+                  <h2 id="h22">Observers</h2>
+                      <hr id="hr2">
+                      <ul id="list2">
+                          <li>D.Baghli</li>
+                          <li>D.Yach</li>
+                          <li>prof3</li>
+                      </ul>
+              </div>
+              </div>
+          </div>
           </div>
         </div>
         <div class="season">
