--- a/Pages/People/people/Peeoplepage.html
+++ b/Pages/People/people/Peeoplepage.html
@@ -39,29 +39,39 @@
             </p>
         </div>
         <div class="season">
-            <div class="vl"></div>
+            <div class="line">
+                <div class="vl"></div>
+            </div>
+
             <br>
             <h3> season:</h3>
             <hr class="hrr">
             <div class="HL"></div>
+            <label> professor:</label>
 
-            <input type="checkbox" name="Licence" style="text-align: right;"> professor
+            <input type="checkbox" name="Licence" style="text-align: right;">
+            <br>
+            <label>administration:</label>
 
-
-            <input type="checkbox" name="Master" style="text-align: right;"> administration
+            <input type="checkbox" name="Master" style="text-align: right;">
             <h3> module:</h2>
                 <hr class="hrr">
                 <div class="HL"></div>
                 <label>module name</label>
                 <input type="checkbox" name="Licence" style="text-align: right;">
+                <br>
                 <label>module name</label>
                 <input type="checkbox" name="Licence" style="text-align: right;">
+                <br>
                 <label>module  name</label>
                 <input type="checkbox" name="Licence" style="text-align: right;">
+                <br>
                 <label>module name</label>
                 <input type="checkbox" name="Licence" style="text-align: right;">
+                <br>
                 <label>module name</label>
                 <input type="checkbox" name="Licence" style="text-align: right;">
+                <br>
                 <h3> role:</h3>
                 <hr class="hrr">
                 <div class="HL"></div>
@@ -81,45 +91,95 @@
 
                 <br><br>
             </div>
-            <div class="pf1">
-                <img class="img" src="images/ghano.png">
+            <div class="pf1" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(92, 111, 125);">
+
+
+                <p>role/role</p>
+                <p><strong>professor name:</strong></p>
+                <img class="img" src="Images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
 
 
 
 
             </div>
-            <div class="pf2">
-                <img class="img" src="images/ghano.png">
+            <div class="pf2" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(170, 213, 246);">
+                <p>role/role</p>
+                <p><strong>professor name:</strong></p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf3">
-                <img class="img" src="images/ghano.png">
+            <div class="pf3" style="border: solid saddlebrown 0.5px; border-radius: 5%; margin: 10px;background-color: rgb(181, 225, 179);">
+                <p>role/role</p>
+                <p><strong>professor name:</strong></p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact: <a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf4">
-                <img class="img" src="images/ghano.png">
+            <div class="pf4" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(236, 156, 156);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf5">
-                <img class="img" src="images/ghano.png">
+            <div class="pf5" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(125, 213, 150);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf6">
-                <img class="img" src="images/ghano.png">
+            <div class="pf6" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(167, 119, 145);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf7">
-                <img class="img" src="images/ghano.png">
+            <div class="pf7" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(205, 125, 215);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf8">
-                <img class="img" src="images/ghano.png">
+            <div class="pf8" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(216, 220, 223);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf9">
-                <img class="img" src="images/ghano.png">
+            <div class="pf9" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(208, 163, 173);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf10">
-                <img class="img" src="images/ghano.png">
+            <div class="pf10" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(102, 147, 181);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf11">
-                <img class="img" src="images/ghano.png">
+            <div class="pf11" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(120, 201, 121);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
-            <div class="pf12">
-                <img class="img" src="images/ghano.png">
+            <div class="pf12" style="border: solid saddlebrown 1px; border-radius: 5%; margin: 10px;background-color: rgb(215, 177, 130);">
+                <p><strong>professor name:</strong></p>
+                <p>role/role</p>
+                <img class="img" src="images/ghanota7an.png">
+                <p><strong>les modules:</strong></p>
+                <p><strong>contact:<a href="john.doe1234@example.com">john.doe1234@example.com</a></strong></p>
             </div>
         </div>
     </div>
