--- a/Midely's Job/academics.html
+++ b/Midely's Job/academics.html
@@ -16,6 +16,7 @@
     td {
         border: 0px solid black;
     }
+   
 </style>
 
 <body>
@@ -38,19 +39,19 @@
             </div>
         </div>
         <div class="bigsentence">
-            <h1>Acadimics</h1>
-            <p>This Page Provides all the essential information about our acadimics path</p>
+            <h1 id="typing1">Acadimics</h1>
+            <p id="typing2">This Page Provides all the essential information about our acadimics path</p>
         </div>
         <div class="LMD">
             <div class="line-container">
                <div class="vl"></div>
             </div>
             <div class="lmd">
-                <h3> Formation:</h3>
+                <h3 class="formationlmd"> Formation:</h3>
             <hr class="hrr">
-            <input type="checkbox" name="Licence" style="text-align: right;" checked>Licence <br>
-            <input type="checkbox" name="Master">Master <br>
-            <input type="checkbox" name="Doctorat">Doctorat <br>
+            <input type="checkbox" name="Licence" checked><label class="checkbox-label">Licence</label><br>
+            <input type="checkbox" name="Master"><label class="checkbox-label">Master</label><br>
+            <input type="checkbox" name="Doctorat"><label class="checkbox-label">Doctorat</label><br>
             </div>
           </div>
 
@@ -67,7 +68,7 @@
         </div>
 
         <div class="secondspace">
-            <h1>what are you going to study</h1>
+            <h1 id="study1">what are you going to study</h1>
             <div class="boxdisplay">
                 <div class="box" id="box1">L1</div>
                 <div class="box" id="box2">L2</div>
@@ -167,8 +168,8 @@
             <a href="#">
                 <h1 id="singincolor">Sign in</h1>
             </a>
-            <h2>Requiremenets</h2>
-            <p>
+            <h2 id="Requiremenets">Requiremenets</h2>
+            <p id="writing">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas libero felis, finibus id nisi vitae, dignissim bibendum magna. Sed maximus consectetur eleifend. Etiam odio lacus, posuere quis feugiat a, sodales at ipsum. Ut lectus est, ultricies in
                 augue id, feugiat varius augue. Aenean et mi id nulla sollicitudin fringilla at eu orci. Cras varius, turpis sed commodo tincidunt, est nunc lobortis ex, egestas ultricies augue felis sit amet tellus. Etiam in libero nisl. Morbi eget vulputate
                 sem.
