--- a/Midely's Job/report.html
+++ b/Midely's Job/report.html
@@ -26,7 +26,10 @@
             </nav>
         </div>
     </div>
-        <div class="footer"></div>
+        <div class="bigsentence">
+            <h1>Reclemation and questions</h1>
+            <p>This page provides all the essential information you need to know</p>
+        </div>
         <div class="first-space">
             <h1 id="reportfrm">Report Form</h1>
         <form action="#">
@@ -45,33 +48,37 @@
             <button type="submit">Submit</button>
         </form>
         </div>
-        <div class="bigsentence">
-            <h1>Reclemation and questions</h1>
-            <p>This page provides all the essential information you need to know</p>
-        </div>
         <div class="secondspace">
             <div class="famousmsq">
-                <h1 id="h1FM"> Famous questions</h1>
+                <h1 id="FamQ"> Famous questions</h1>
             </div>
                 <div class="fstq">
-                    <div class="question1">
-                        <div class="boxsghir" id="qst">Question</div>
-                        <div class="answer">Answer</div>
+                    <div class="firstquestion">
+                        <h2>Question</h2>
+                    </div>
+                    <div class="firstanswer">
+                        <p>Answer</p>
                     </div>
                 </div>
                 <div class="scnq">
-                    <div class="question2">
-                        <div class="boxsghir" id="qst">Question</div>
-                        <div class="answer">Answer</div>
+                    <div class="firstquestion">
+                        <h2>Question</h2>
                     </div>
+                    <div class="firstanswer">
+                        <p>Answer</p>
+                    </div>
+                    
                 </div>
                 <div class="thdq">
-                    <div class="question3">
-                        <div class="boxsghir" id="qst">Question</div>
-                        <div class="answer">Answer</div>
+                    <div class="firstquestion">
+                        <h2>Question</h2>
+                    </div>
+                    <div class="firstanswer">
+                        <p>Answer</p>
                     </div>
                 </div>
         </div>
+            <div class="footer"></div>
       </div>
 </body>
 </html>
